New player creation

--- a/agar-client/MainWindow.xaml
+++ b/agar-client/MainWindow.xaml
@@ -6,7 +6,23 @@
         xmlns:local="clr-namespace:agar_client"
 		xmlns:main="clr-namespace:agar_client"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="700" Width="700">
+
+	<Grid Margin="0,0,0,0">
+		<Canvas x:Name="gameCanvas" ClipToBounds="True" Width="700" Height="500" HorizontalAlignment="Left" VerticalAlignment="Top" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
+
+			<!--<Ellipse x:Name="playerEllipse"
+                Fill="Yellow"
+                Height="50"
+                Width="50"
+                StrokeThickness="2"
+                Stroke="Black" Canvas.Left="100" Canvas.Top="100"/>-->
+
+		</Canvas>
+		<Button x:Name="connectButton" Content="Start game" HorizontalAlignment="Left" Margin="10,505,0,0" VerticalAlignment="Top" Width="131" Click="connectButton_Click"/>
+		<TextBox x:Name="logTextBox" HorizontalAlignment="Stretch" Margin="10,530,10,10" TextWrapping="Wrap" VerticalAlignment="Stretch" IsReadOnlyCaretVisible="True" IsReadOnly="True" VerticalContentAlignment="Top"/>
+
+	</Grid>
 
 	<Window.CommandBindings>
 		<CommandBinding Command="main:Command.Player_move" Executed="ProcessMovementInput" />
@@ -19,17 +35,4 @@
 		<KeyBinding Key="Left" Command="main:Command.Player_move" CommandParameter="left" />
 	</Window.InputBindings>
 
-	<Grid>
-		<Canvas x:Name="gameCanvas">
-			
-			<Ellipse x:Name="playerEllipse"
-                Fill="Yellow"
-                Height="50"
-                Width="50"
-                StrokeThickness="2"
-                Stroke="Black" Canvas.Left="100" Canvas.Top="100"/>
-
-		</Canvas>
-
-	</Grid>
 </Window>
